--- a/_styles/page/login.css
+++ b/_styles/page/login.css
@@ -4,5 +4,108 @@
 ========================================================*/
 
 /* + Login CSS - Begin */
+html
+{
+    background-color: #00aff0;
+}
 
+.pw
+{
+    width: 682px;
+}
+
+#visual
+{
+    height: 207px;
+    margin-top: 11.6em;
+    background: url(../../_imgs/high/logo_bg_l.png) left bottom repeat-x;
+}
+#core
+{
+    margin-left: 265px;
+    margin-top: 20px;
+}
+#core p
+{
+    line-height: 1.5em;
+}
+
+.fl-input
+{
+    line-height: 2em;
+    height: 2em;
+    width: 16.5em;
+    padding: 0 10px;
+    background-color: #fff;
+    border: 1px solid #008bbf;
+    
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+}
+.fl-label
+{
+    color: #bebebe;
+    line-height: 2em;
+    left: 10px;
+}
+.fl-button
+{
+    margin-top: 1px;
+    cursor: pointer;
+    color: #fff;
+    line-height: 2em;
+    height: 2em;
+    padding: 0 15px;
+    border: 1px solid #008bbf;
+    
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    
+    background-color: #f37916;
+    
+    /* Firefox 3.6+ */
+    background: -moz-linear-gradient(100% 100% 90deg, #f37916, #f2a217); 
+    /* Safari 4-5, Chrome 1-9 */
+    /* -webkit-gradient(<type>, <point> [, <radius>]?, <point> [, <radius>]? [, <stop>]*) */
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#f2a217), to(#f37916)); 
+    /* Safari 5.1+, Chrome 10+ */
+    background: -webkit-linear-gradient(#f2a217, #f37916); 
+    /* Opera 11.10+ */
+    background: -o-linear-gradient(#f2a217, #f37916);
+}
+
+#dailytopic
+{
+    padding: 10px 15px;
+    border: 1px solid #008bbf;
+    
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    
+    background-color: #2fc6fe;
+    
+    /* Firefox 3.6+ */
+    background: -moz-linear-gradient(100% 100% 90deg, #00aff0, #2fc6fe); 
+    /* Safari 4-5, Chrome 1-9 */
+    /* -webkit-gradient(<type>, <point> [, <radius>]?, <point> [, <radius>]? [, <stop>]*) */
+    background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#2fc6fe), to(#00aff0)); 
+    /* Safari 5.1+, Chrome 10+ */
+    background: -webkit-linear-gradient(#2fc6fe, #00aff0); 
+    /* Opera 11.10+ */
+    background: -o-linear-gradient(#2fc6fe, #00aff0);
+}
+#dailytopic p
+{
+    line-height: 1.3em;
+}
+.dt-icon-read
+{
+    width: 64px;
+    height: 51px;
+    margin: 0 15px 10px 0;
+    background: url(../../_imgs/high/icon_read.png) left bottom repeat-x;
+}
 /* + Login CSS - End */
